--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "site-lisp/php-mode"]
 	path = site-lisp/php-mode
 	url = https://github.com/ejmr/php-mode
+[submodule "themes"]
+	path = themes
+	url = https://github.com/owainlewis/emacs-color-themes.git
