Add javadoc lookup support for java editing

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,23 @@
+*.elc
+.#.*
+.emacs.desktop*
+.sx/*
 abbrev_defs
 ac-*
 auto-save-list/*
 backups/*
+ede-projects.el
 elpa/*
-semanticdb/*
+flycheck_init.el
 geben/*
-projectile*
-tmp/*
-tramp
 jabber-avatar-cache/*
 jabber-history/*
-url/*
-.#.*
-.emacs.desktop*
-recentf
-*.elc
-.sx/*
+javadoc-cache/*
 local.el
-flycheck_init.el
-ede-projects.el
+projectile*
 rake.cache
+recentf
+semanticdb/*
+tmp/*
+tramp
+url/*
