--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "site-lisp/ede-php-autoload"]
 	path = site-lisp/ede-php-autoload
 	url = git@github.com:stevenremot/ede-php-autoload.git
+[submodule "site-lisp/semantic-php"]
+	path = site-lisp/semantic-php
+	url = git@github.com:jorissteyn/semantic-php.git
